force-app/main/default/objects/ssot__LoyaltyProgramMemberPromotion__dlm/fields/ssot__CumulativeUsageCompleted__c.field-meta.xml
<CustomField>
    <fullName>ssot__CumulativeUsageCompleted__c</fullName>
    <label>Cumulative Usage Completed</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>CumulativeUsageCompleted</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <required>true</required>
    <scale>3</scale>
    <type>Number</type>
</CustomField>