force-app/main/default/objects/ssot__LoyaltyProgramMemberPromotion__dlm/fields/ssot__CumulativeUsageCompletePercent__c.field-meta.xml
<CustomField>
    <fullName>ssot__CumulativeUsageCompletePercent__c</fullName>
    <label>Cumulative Usage Complete Percent</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>CumulativeUsageCompletePercent</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>