force-app/main/default/objects/ssot__LoyaltyProgramMemberPromotion__dlm/fields/ssot__rel_1697761182497_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1697761182497_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>LoyaltyProgramMemberPromotion_Promot_rel</label>
    <referenceTo>ssot__Promotion__dlm</referenceTo>
    <relationshipLabel>LoyaltyProgramMemberPromotion_Promot_rel</relationshipLabel>
    <relationshipName>rel_1697761182497_end</relationshipName>
    <type>Lookup</type>
</CustomField>