force-app/main/default/objects/ssot__LoyaltyProgramMemberPromotion__dlm/fields/ssot__rel_1697761182841_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1697761182841_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>LoyaltyProgramMember_Id_map_LoyaltyP_rel</label>
    <referenceTo>ssot__LoyaltyProgramMember__dlm</referenceTo>
    <relationshipLabel>LoyaltyProgramMember_Id_map_LoyaltyP_rel</relationshipLabel>
    <relationshipName>rel_1697761182841_end</relationshipName>
    <type>Lookup</type>
</CustomField>